--- a/src/views/investment.jade
+++ b/src/views/investment.jade
@@ -7,18 +7,18 @@ block content
   section#investments.investments
     ul.investment
       h1 Photo
-      li.investment__item Each package includes 2 shooters
-      li.investment__item #[strong 4 hours • $1500]#[br]getting ready, portraits, ceremony, family photos, more portraits
-      li.investment__item #[strong 6 hours • $2000]#[br]getting ready, portraits, ceremony, family photos, more portraits, light reception coverage
-      li.investment__item #[strong 8 hours • $2500]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (w/o send-off)
-      li.investment__item #[strong 10+ hours • $3000]#[br]getting ready, portraits, ceremony, family photos, more portraits, full reception coverage (with send-off)
+      li.investment__item Each package includes 2 shooters and a full day of coverage
+      li.investment__item #[strong 200 - 350 images • $1500]
+      li.investment__item #[strong 350 - 500 images • $2000]
+      li.investment__item #[strong 500 - 650 images • $2500]
+      li.investment__item #[strong 650 - 800+ images • $3000]
     ul.investment
       h1 Video
-      li.investment__item Each package includes 2 shooters
-      li.investment__item #[strong 4 hours • 3-5 mins • $2000]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots
-      li.investment__item #[strong 6 hours • 6-8 mins • $2500]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, light reception coverage
-      li.investment__item #[strong 8 hours • 8-10 mins • $3000]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (w/o send-off)
-      li.investment__item #[strong 10+ hours • 12+ mins • $3500]#[br]getting ready, basic interview/message to partner, ceremony, bridal party &amp; couple shots, full reception coverage (with send-off)
+      li.investment__item Each package includes 2 shooters and a full day of coverage
+      li.investment__item #[strong 3 - 5 mins • $2000]
+      li.investment__item #[strong 6 - 8 mins • $2500]
+      li.investment__item #[strong 8 - 10 mins • $3000]
+      li.investment__item #[strong 10 - 12+ mins • $3500]
     ul.addons
       h1 Photo add-ons
       li.addons__item #[strong $300 •] engagement session
