--- a/src/views/contact.jade
+++ b/src/views/contact.jade
@@ -6,24 +6,28 @@ block content
       div.form
         h1 We'd love to work with you
         p Tell us a little bit about you and your loved one. We'd love to start a conversation about capturing your perfect day.
-        form#contact-form(method="post" action="/submit")
-          fieldset
-            label(for="name") Name*
-              span#name
-            input(type="text", name="name")
-          fieldset
-            label(for="email") Email*
-              span#email
-            input(type="text", name="email")
-          fieldset
-            label(for="message") Message*
-              span#message
-            textarea(name="message")
-          fieldset
-            input.btn(type="submit" value="Submit")
-      div.form-success
-        h1 Thank you for reaching out!
-        p We will get back to you as soon as possible to chat about your big day!
-      div.form-error
-        h1 Uh oh! Looks like something went wrong.
-        p Try refreshing the page and sending the form again. Or just give us a call at #[a(href="tel:2484202040") 248.420.2040].
+
+        script(type="text/javascript" src="//d25purrcgqtc5w.cloudfront.net/assets/widgetiframe/iframeResizer.min.js")
+        iframe(src="https://widget.honeybook.com/assets_users_production/companies/5a67420b238f373ccce1d3f9/widgets/honeybook_widget.html" frameBorder="0" width="100%" height="750")
+
+      //-   form#contact-form(method="post" action="/submit")
+      //-     fieldset
+      //-       label(for="name") Name*
+      //-         span#name
+      //-       input(type="text", name="name")
+      //-     fieldset
+      //-       label(for="email") Email*
+      //-         span#email
+      //-       input(type="text", name="email")
+      //-     fieldset
+      //-       label(for="message") Message*
+      //-         span#message
+      //-       textarea(name="message")
+      //-     fieldset
+      //-       input.btn(type="submit" value="Submit")
+      //- div.form-success
+      //-   h1 Thank you for reaching out!
+      //-   p We will get back to you as soon as possible to chat about your big day!
+      //- div.form-error
+      //-   h1 Uh oh! Looks like something went wrong.
+      //-   p Try refreshing the page and sending the form again. Or just give us a call at #[a(href="tel:2484202040") 248.420.2040].
